@@ -89,6 +89,7 @@ Other changes:
  - gui: fixed edit_box getting stuck when pressing Backspace to delete all partially-displayed text
  - gui: fixed FontString:set_font() outline flags not handled correctly
  - gui: fixed edit_box numeric-only mode not accepting input correctly
+ - gui: fixed scroll_frame not propagating all size updates to its scroll child
  - xml: now parsing standard XML comments
 
 v1.2.0:
